k8s/backup_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: tss-backup-pod
spec:
  containers:
  - name: tss-backup
    image: cubocicloide/tss:backup.1
    command: ["sleep", "infinity"] # Mantiene il Pod attivo indefinitamente
  restartPolicy: Always
