k8s/jobs_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: tss-data-restore-pod
spec:
  containers:
  - name: tss-data-restore
    image: cubocicloide/tss:jobs.9
    command: ["sleep", "infinity"] # Mantiene il Pod attivo indefinitamente
    volumeMounts:
      - name: database-storage
        mountPath: "/data"
  volumes:
    - name: database-storage
      persistentVolumeClaim:
        claimName: database-storage-tss-couchdb-0
  restartPolicy: Always
