k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tss-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tss-frontend
  template:
    metadata:
      labels:
        app: tss-frontend
    spec:
      containers:
      - name: tss-frontend
        image: vtripolitakis/tss-frontend:latest
        ports:
        - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: tss-frontend-service
spec:
  type: LoadBalancer
  selector:
    app: tss-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
