k8s/restapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tss-restapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tss-restapi
  template:
    metadata:
      labels:
        app: tss-restapi
    spec:
      containers:
      - name: tss-restapi
        image: vtripolitakis/tss-rest-api:latest
        ports:
        - containerPort: 5050
---

apiVersion: v1
kind: Service
metadata:
  name: tss-restapi-service
spec:
  type: LoadBalancer
  selector:
    app: tss-restapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5050
